--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         app:am_badgeColor="#ff5688ff"
         app:am_buttonNormalColor="#ff999999"
         app:am_buttonPressColor="#ff999999"
+        app:am_expandDirect="expandDirectRight"
         app:am_icon="@drawable/close"></com.ashlikun.animmenu.AnimMenu>
 
 
